# prospect-acquisition-agent

./: .gitignore  Makefile  people_mock_response.json  pyproject.toml  test_main.http
src/prospect_acquisition_agent/: main.py
src/prospect_acquisition_agent/api/: app.py  dependencies.py  lifespan.py  middleware.py
src/prospect_acquisition_agent/api/routes/: health.py
src/prospect_acquisition_agent/config/: logging.py  settings.py
src/prospect_acquisition_agent/helper/: context.py  id_generator.py
src/prospect_acquisition_agent/models/: health.py  llm.py  response.py  vector_store.py
src/prospect_acquisition_agent/service/: apollo_serivce.py  base_third_party_api_service.py
